# vision-feature-extraction

./: CMakeLists.txt
src/: binarization.hpp  feature_extraction.hpp  geometry.hpp  main.cpp  segmentation.hpp  tools.hpp
